# bedrock-for-github-actions

./: analyze_document.py  document.md  pyproject.toml  s3-copy.sh
.github/workflows/: aws-github-actions.yml
